src/test/ui/issue-53787-inline-assembler-macro.stderr
error[E0669]: invalid value for constraint in inline assembly
  --> $DIR/issue-53787-inline-assembler-macro.rs:21:16
   |
LL |     fake_jump!("FirstFunc"); //~ ERROR invalid value for constraint in inline assembly
   |                ^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0669`.
